# python-design-patterns

./: .pre-commit-config.yaml  pyproject.toml  setup.cfg
behavioral_patterns/: memento.py  strategy.py
behavioral_patterns/interpreter/: boiler.py  interpreter.py
behavioral_patterns/observer/: observer.py  rx_example1.py  rx_example2.py
behavioral_patterns/state/: state.py
creational_patterns/: prototype.py  singleton.py
creational_patterns/builder/: apple_factory.py  computer_builder.py  fluent_builder.py  pizza_builder.py
creational_patterns/factory/: abstract_factory.py  factory_method.py
creational_patterns/factory/maze/: door.py  main.py  mapsite.py  room.py  wall.py
microservices/: retry_write_file.py  service_first.py  test_services_first.py
structural_patterns/adapter/: adapter.py  external.py
structural_patterns/bridge/: bridge.py
structural_patterns/chain_of_responsibility/: chain.py
structural_patterns/command/: command.py
structural_patterns/decorator/: mymath.py  number_sum.py
structural_patterns/facade/: facade.py
structural_patterns/flyweight/: flyweight.py
structural_patterns/mvc/: mvc.py
structural_patterns/proxy/: lazy.py
